force-app/main/default/objects/MC_Custom_Job_Step__mdt/fields/LWC_Name__c.field-meta.xml
<CustomField>
    <fullName>LWC_Name__c</fullName>
    <description>Name of LWC/Aura component to render while configuring the Custom Job step</description>
    <inlineHelpText>Name of LWC/Aura component to render while configuring the Custom Job step</inlineHelpText>
    <label>LWC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>