force-app/main/default/objects/MC_Custom_Job_Step__mdt/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description>Platform Name</description>
    <inlineHelpText>Platform Name</inlineHelpText>
    <label>Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>